--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,13 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
 
+    //jwt
     implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
     implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+
+    //DTO validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
